edited website name

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                                 <i class="fa fa-globe" aria-hidden="true">
                                     Webpage:
                                     <span class="hide-on-small-only">You are at it, but still: </span>
-                                    <a class="lime-text" href="mailto:arnavgarg.com">arnavgarg.com</a>
+                                    <a class="lime-text" href="mailto:https://garnav98.github.io/">garnav98.github.io/</a>
                                 </i>
                             </h6>
                         </div>
