"here: resume click

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                             <p style="font-size:18px;">Hey there, I am Arnav. I am a <strong>2nd year undergraduate</strong> at <strong>IIT Kanpur</strong> in the Civil Engineering Department who believes in the <strong>'Art of googling ;-) '</strong>, and will be happy to collaborate with you on any interesting project. </p>
                             <p style="font-size:18px;"> During the first year of my engineering, I got interested in <strong>programming</strong> and the <strong>'Art of automation'</strong>. I've ignited interest in <strong>Machine Learning</strong>, learning as I try to do some interesting stuff with it! Since then I've been working to improve my <strong>coding skills</strong> while shutting several bugs up! </p>
                             <p style="font-size:18px;">Apart from that, I love reading novels mostly suspense thrillers, and have a keen interest in painting. When not staring at some code, you can find me practising card tricks, solving sudoku puzzles or playing football. Oh! and I am avid Real Madrid FC, as can be seen from the favicon of this site.</p>
-                            <p style="font-size:18px;">My resume can be found <a class="lime-text" href="https://github.com/garnav98/Resume/blob/master/My%20Resume.pdf">here.</a></p>
+                            <p style="font-size:18px;">My resume can be found <a class="lime-text" href="My_resume.pdf">here.</a></p>
                     </div>
                 </div>
             </div>
