highlights in about me se3ction

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
     ==========================================-->
     <div id="tf-home" class="text-center">
         <div class="overlay">
-            <div class="content">
+            <div class="content" >
                 <h1>
-                    Arnav <strong><span class="color">Garg</span></strong>
+                     Arnav <strong><span class="color">Garg</span></strong>
                 </h1>
                 <p class="lead">SOPHOMORE | <strong>IIT KANPUR</strong> </p>
                 <a href="#tf-team" class="fa fa-angle-down page-scroll"></a>
@@ -174,10 +174,10 @@
                     </div>
                     <div class="caption">
                             <p>.</p>
-                            <p style="font-size:18px;">Hey there, I am Arnav. I am a <strong>2nd year undergraduate</strong> at <strong>IIT Kanpur</strong> in the Civil Engineering Department who believes in the <strong>'Art of googling ;-) '</strong>, and will be happy to collaborate with you on any interesting project. </p>
-                            <p style="font-size:18px;"> During the first year of my engineering, I got interested in <strong>programming</strong> and the <strong>'Art of automation'</strong>. I've ignited interest in <strong>Machine Learning</strong>, learning as I try to do some interesting stuff with it! Since then I've been working to improve my <strong>coding skills</strong> while shutting several bugs up! </p>
-                            <p style="font-size:18px;">Apart from that, I love reading novels mostly suspense thrillers, and have a keen interest in painting. When not staring at some code, you can find me practising card tricks, solving sudoku puzzles or playing football. Oh! and I am avid Real Madrid FC, as can be seen from the favicon of this site.</p>
-                            <p style="font-size:18px;">My resume can be found <a class="lime-text" href="My_resume.pdf" target="_blank">here.</a></p>
+                            <p style="font-size:18px;">Hey there, I am Arnav. I am a <span class="color">2nd year undergraduate</span> at <strong><span class="color">IIT Kanpur</span></strong> in the Civil Engineering Department who believes in the <span class="color">'Art of googling ;-) '</span>, and will be happy to collaborate with you on any interesting project. </p>
+                            <p style="font-size:18px;"> During the first year of my engineering, I got interested in <span class="color">programming</span> and the <span class="color">'Art of automation'</span>. I've ignited interest in <strong><span class="color">Machine Learning</span></strong>, learning as I try to do some interesting stuff with it! Since then I've been working to improve my <span class="color">coding skills</span> while shutting several bugs up! </p>
+                            <p style="font-size:18px;">Apart from that, I love reading novels mostly suspense thrillers, and have a keen interest in painting. When not staring at some code, you can find me practising card tricks, solving sudoku puzzles or playing football. Oh! and I am avid <span class="color">Real Madrid FC</span>, as can be seen from the favicon of this site.</p>
+                            <p style="font-size:18px;">My resume can be found<strong><a class="lime-text" href="My_resume.pdf"> here.</a></strong></p>
                     </div>
                 </div>
             </div>
@@ -486,9 +486,9 @@
                     </div>
 
                     <div class="row">
-                        <div class="col s12 m8 l8 offset-m2 offset-l2 valign wrapper">
+                        <div class="col s12 m8 l8 offset-m2 offset-l2 valign wrapper" >
                             <h6>
-                                <i class="fa fa-map-marker" aria-hidden="true">
+                                <i class="fa fa-map-marker" aria-hidden="true" style="font-size:16px;">
                                     Address: E-211, Hall-05, IIT Kanpur-208016, India
                                 </i>
                             </h6>
@@ -498,7 +498,7 @@
                     <div class="row">
                         <div class="col s12 m8 l8 offset-m2 offset-l2 valign wrapper">
                             <h6>
-                                <i class="fa fa-phone" aria-hidden="true">
+                                <i class="fa fa-phone" aria-hidden="true" style="font-size:16px;">
                                     Phone:<strong> Confidential</strong>
                                     <em class="hide-on-small-only">- but my friends have it </em>
                                 </i>
@@ -509,7 +509,7 @@
                     <div class="row">
                         <div class="col s12 m8 l8 offset-m2 offset-l2 valign wrapper">
                             <h6>
-                                <i class="fa fa-envelope" aria-hidden="true">
+                                <i class="fa fa-envelope" aria-hidden="true" style="font-size:16px;">
                                     Mail:
                                     <a class="lime-text" href="mailto:gargarnav98@gmail.com">Gmail</a>
                                     or
@@ -522,10 +522,10 @@
                     <div class="row">
                         <div class="col s12 m8 l8 offset-m2 offset-l2 valign wrapper">
                             <h6>
-                                <i class="fa fa-globe" aria-hidden="true">
+                                <i class="fa fa-globe" aria-hidden="true" style="font-size:16px;">
                                     Webpage:
                                     <span class="hide-on-small-only">You are at it, but still: </span>
-                                    <a class="lime-text" href="mailto:https://garnav98.github.io/">garnav98.github.io/</a>
+                                    <a class="lime-text" href="mailto:https://garnav98.github.io/">garnav98.github.io</a>
                                 </i>
                             </h6>
                         </div>
@@ -534,7 +534,7 @@
                     <div class="row">
                         <div class="col s12 m8 l8 offset-m2 offset-l2 valign wrapper">
                             <h6>
-                                <i class="fa fa-github" aria-hidden="true">
+                                <i class="fa fa-github" aria-hidden="true" style="font-size:16px;">
                                     Github:
                                     <a class="lime-text" href="https://github.com/garnav98/">garnav98</a>
                                 </i>
@@ -545,7 +545,7 @@
                     <div class="row">
                         <div class="col s12 m8 l8 offset-m2 offset-l2 valign wrapper">
                             <h6>
-                                <i class="fa fa-facebook" aria-hidden="true">
+                                <i class="fa fa-facebook" aria-hidden="true" style="font-size:16px;">
                                     Facebook:
                                     <a class="lime-text" href="https://www.facebook.com/arnav.garg.7">garnav</a>
                                 </i>
@@ -556,7 +556,7 @@
                     <div class="row">
                         <div class="col s12 m8 l8 offset-m2 offset-l2 valign wrapper">
                             <h6>
-                                <i class="fa fa-linkedin" aria-hidden="true">
+                                <i class="fa fa-linkedin" aria-hidden="true" style="font-size:16px;">
                                       Linkedin:
                                     <a class="lime-text" href="www.linkedin.com/in/arnav-garg">arnav-garg</a>
                                 </i>
