--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                                 <i class="fa fa-globe" aria-hidden="true" style="font-size:16px;">
                                     Webpage:
                                     <span class="hide-on-small-only">You are at it, but still: </span>
-                                    <a class="lime-text" href="mailto:https://garnav98.github.io/">garnav98.github.io</a>
+                                    <a class="lime-text" href="https://garnav98.github.io/">garnav98.github.io</a>
                                 </i>
                             </h6>
                         </div>
@@ -558,7 +558,7 @@
                             <h6>
                                 <i class="fa fa-linkedin" aria-hidden="true" style="font-size:16px;">
                                       Linkedin:
-                                    <a class="lime-text" href="www.linkedin.com/in/arnav-garg">arnav-garg</a>
+                                    <a class="lime-text" href="https://www.linkedin.com/in/arnav-garg">arnav-garg</a>
                                 </i>
                             </h6>
                         </div>
