--- a/index.html
+++ b/index.html
@@ -79,13 +79,19 @@
     ==========================================-->
     <div id="tf-home" class="text-center">
         <div class="overlay">
-            <div class="content" >
+            <div class="content typewriter" >
                 <h1>
-                     Arnav <strong><span class="color">Garg</span></strong>
+                    <strong><span class="color"> Arnav </span></strong> Garg
                 </h1>
-                <p class="lead">SOPHOMORE | <strong>IIT KANPUR</strong> </p>
-                <a href="#tf-team" class="fa fa-angle-down page-scroll"></a>
+                <!-- <p class="lead">SOPHOMORE | <strong>IIT KANPUR</strong> </p>
+                <a href="#tf-team" class="fa fa-angle-down page-scroll"></a> --> 
             </div>
+
+            <div class="content1" >
+                <p class="lead">SOPHOMORE | <strong>IIT KANPUR</strong> </p>
+                <a href="#tf-team" class="fa fa-angle-down page-scroll"></a> 
+            </div>
+
 
             <div class="row" style="font-size:16px;font-color:FFFFFF">
                 <!-- <div class="col s12 m6 l6 offset-m3 offset-l3">
