--- a/index.html
+++ b/index.html
@@ -79,18 +79,18 @@
     ==========================================-->
     <div id="tf-home" class="text-center">
         <div class="overlay">
-            <div class="content typewriter" >
+            <div class="content" >
                 <h1>
                     <strong><span class="color"> Arnav </span></strong> Garg
                 </h1>
-                <!-- <p class="lead">SOPHOMORE | <strong>IIT KANPUR</strong> </p>
-                <a href="#tf-team" class="fa fa-angle-down page-scroll"></a> --> 
-            </div>
-
-            <div class="content1" >
                 <p class="lead">SOPHOMORE | <strong>IIT KANPUR</strong> </p>
                 <a href="#tf-team" class="fa fa-angle-down page-scroll"></a> 
             </div>
+
+            <!-- <div class="content1" >
+                <p class="lead">SOPHOMORE | <strong>IIT KANPUR</strong> </p>
+                <a href="#tf-team" class="fa fa-angle-down page-scroll"></a> 
+            </div> -->
 
 
             <div class="row" style="font-size:16px;font-color:FFFFFF">
